--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 env_logger = "0.10.1"
 iced = "0.10.0"
 iced_aw = "0.7.0"
+itertools = "0.12.0"
 log = "0.4.20"
 serde = { version = "1.0.192", features = ["derive"] }
