--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ iced = "0.10.0"
 iced_aw = "0.7.0"
 itertools = "0.12.0"
 log = "0.4.20"
+once_cell = "1.18.0"
 serde = { version = "1.0.192", features = ["derive"] }
