--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+derive_more = "0.99.17"
+dotenv = "0.15.0"
 env_logger = "0.10.1"
 iced = "0.10.0"
 iced_aw = "0.7.0"
