--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,7 @@ edition = "2021"
 [dependencies]
 derive_more = "0.99.17"
 dotenv = "0.15.0"
-env_logger = "0.10.1"
 iced = "0.10.0"
-iced_aw = "0.7.0"
+iced_aw = { version = "0.7.0", features = ["menu", "modal"] }
 itertools = "0.12.0"
-log = "0.4.20"
 once_cell = "1.18.0"
-serde = { version = "1.0.192", features = ["derive"] }
