--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 derive_more = "0.99.17"
 iced = "0.10.0"
 iced_aw = { version = "0.7.0", features = ["menu", "modal"] }
 itertools = "0.12.0"
 once_cell = "1.18.0"
+serde = { version = "1.0.193", features = ["derive"] }
