--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ iced_aw = { version = "0.7.0", features = ["menu", "modal"] }
 itertools = "0.12.0"
 once_cell = "1.18.0"
 serde = { version = "1.0.193", features = ["derive"] }
+
+[profile.release]
+panic = "abort"
