--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "checkers"
 authors = ["Сырцев Вадим Игоревич <syrtcevvi@gmail.com>"]
-description = "Шашки с системой контроля версий"
+description = "Игра Шашки"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,8 +10,7 @@ edition = "2021"
 [dependencies]
 bincode = "1.3.3"
 derive_more = "0.99.17"
-iced = "0.10.0"
-iced_aw = { version = "0.7.0", features = ["menu", "modal"] }
+iced = { version = "0.10.0", features = ["canvas"] }
 itertools = "0.12.0"
 once_cell = "1.18.0"
 serde = { version = "1.0.193", features = ["derive"] }
